--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "numpy>=2.2.4",
     "openai==1.59.*",
     "pexpect>=4.9.0",
+    "pillow>=10.0.0",
+    "polars>=1.27.1",
     "pre-commit>=4.2.0",
     "prompt-toolkit>=3.0.50",
     "pyright>=1.1.398",
